@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor UI_COLOR_T4
skinparam classBackgroundColor UI_COLOR

package UI <<Rectangle>>{
Interface Ui <<Interface>>
Class "{abstract}\nUiPart" as UiPart
Class UiManager
Class MainWindow
Class SettingsWindow
Class HelpWindow
Class ResultDisplay
Class ClientListPanel
Class ClientCard
Class StatusBarFooter
Class CommandBox
Class Homepage
class RightSideBar
class SessionCard
class ClientInfoPage
}

package Model <<Rectangle>> {
Class HiddenModel #FFFFFF
}

package Logic <<Rectangle>> {
Class HiddenLogic #FFFFFF
}

Class HiddenOutside #FFFFFF
HiddenOutside ..> Ui

ClientCard .left.> Model
SessionCard .left.> Model
ClientInfoPage -left-> Model
Homepage -left-> Model
UiManager --> Logic
MainWindow --> Logic
ClientListPanel --> Logic
RightSideBar --> Logic
SettingsWindow --> Logic

UiManager .left.|> Ui
UiManager -down-> MainWindow
MainWindow --> HelpWindow
MainWindow --> SettingsWindow
MainWindow <-down-> CommandBox
MainWindow *-down-> ResultDisplay
MainWindow <-down-> ClientListPanel
MainWindow *-down-> StatusBarFooter
MainWindow *-down-> Homepage
MainWindow <---> RightSideBar
MainWindow ..> ClientInfoPage

ClientListPanel -down-> ClientCard
RightSideBar ---> SessionCard

MainWindow -up-|> UiPart

ResultDisplay --|> UiPart
CommandBox --|> UiPart
ClientListPanel --|> UiPart
ClientCard --|> UiPart
StatusBarFooter --|> UiPart
SettingsWindow --|> UiPart
HelpWindow -down-|> UiPart
Homepage --|> UiPart
RightSideBar --|> UiPart
SessionCard --|> UiPart
ClientInfoPage --|> UiPart

HelpWindow -[hidden]left- CommandBox
CommandBox -[hidden]left- ResultDisplay

MainWindow -[hidden]-|> UiPart
@enduml
